--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLL"
     android:orientation="vertical"
@@ -10,6 +10,10 @@
         android:id="@+id/main_webview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
 
     <RelativeLayout
         android:id="@+id/splash_view"
@@ -26,4 +30,4 @@
     </RelativeLayout>
 
 
-</FrameLayout>
+</LinearLayout>
