--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLL"
     android:orientation="vertical"
@@ -9,11 +9,19 @@
     <org.apache.cordova.CordovaWebView
         android:id="@+id/main_webview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+        </org.apache.cordova.CordovaWebView>
+
+    <FrameLayout
+        android:id="@+id/shadow_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <org.apache.cordova.CordovaWebView
+            android:id="@+id/shadow"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/splash_view"
@@ -30,4 +38,4 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</FrameLayout>
