--- a/app/src/main/assets/www/css/index.css
+++ b/app/src/main/assets/www/css/index.css
@@ -138,12 +138,11 @@ body {
     
     background-image:none;
     background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family:'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
     background-color:#BBBFBF;
 }
