--- a/app/src/main/assets/www/css/index.css
+++ b/app/src/main/assets/www/css/index.css
@@ -230,7 +230,7 @@ body {
     background-color: white;
     width: 87%;
     //height: 80%;
-    //min-height: 80%;
+    min-height: 80%;
     box-shadow: 0px 10px 15px #161415;
 }
 h1 {
