--- a/app/src/main/assets/www/css/index.css
+++ b/app/src/main/assets/www/css/index.css
@@ -295,11 +295,11 @@ h1 {
 {
     position: fixed;
     height:40%;
-    width: 20%;
-    left: 0;
-    top: -40%;
-    z-index: 300;
-    background-color: green;
+    width: 30%;
+    right: 0%;
+    top:50%;
+    z-index: 10;
+    background-color: #464342;
     border-radius: 8px;
 }
 @keyframes fade {
@@ -509,6 +509,7 @@ a.option_container img.displayed {
     margin-right: auto;
         vertical-align: middle;'
 }
+#galleria{height:320px}
 #toolmark
 {
     background-color: white;
@@ -518,6 +519,15 @@ a.option_container img.displayed {
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
     text-align: center;
+}
+#galleryPanel
+{
+    position: fixed;
+    height: auto;
+    width: 50%;
+    top: 50%;
+    left: 10%;
+   background-color: blue;
 }
 #githubPanel
 {
@@ -675,4 +685,107 @@ a.image_container img {
     margin: auto;
     vertical-align: middle;
     
+}
+.CSSTableGenerator {
+    position: absolute;
+	margin:0px;padding:0px;
+    height: 91%;
+	width:100%;
+	display: block;
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+	
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+	
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+	
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
+}.CSSTableGenerator table{
+    border-collapse: collapse;
+        border-spacing: 0;
+    height: 100%;
+	width:100%;
+	margin:0px;padding:0px;
+    display: block;
+}
+.CSSTableGenerator table tbody{
+    overflow-y: scroll;
+    border-collapse: collapse;
+        border-spacing: 0;
+    height: 100%;
+	width:100%;
+	margin:0px;padding:0px;
+    display: block;
+}
+.CSSTableGenerator table tbody tr
+{
+    display:table;
+    width: 100%;
+}
+.CSSTableGenerator tr:last-child td:last-child {
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+}.CSSTableGenerator tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+}.CSSTableGenerator tr td:last-child:hover {
+	background-color:#ffffff;
+		
+
+}
+.CSSTableGenerator td{
+    width: 50%;
+	vertical-align:middle;
+	
+	background-color:transparent;
+
+	border:1px solid #000000;
+	border-width:0px 1px 1px 0px;
+	text-align:left;
+	padding:10px;
+	font-size:15px;
+	font-family:Arial;
+	font-weight:normal;
+	color:#FFFFFF;
+}.CSSTableGenerator tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}.CSSTableGenerator tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}.CSSTableGenerator tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+.CSSTableGenerator tr:first-child td{
+		background:-o-linear-gradient(bottom, transparent 5%, transparent 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, transparent), color-stop(1, transparent) );
+	background:-moz-linear-gradient( center top, transparent 5%, transparent 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="transparent", endColorstr="transparent");	background: -o-linear-gradient(top,transparent,ff7f00);
+
+	background-color:transparent;
+	border:0px solid #000000;
+	border-width:0px 0px 1px 1px;
+	font-size:14px;
+	font-family:Arial;
+	font-weight:bold;
+	color:#ffffff;
+}
+.CSSTableGenerator tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, transparent 5%, transparent 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, transparent), color-stop(1, transparent) );
+	background:-moz-linear-gradient( center top, transparent 5%, transparent 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="transparent", endColorstr="transparent");	background: -o-linear-gradient(top,transparent,ff7f00);
+
+	background-color:transparent;
+}
+.CSSTableGenerator tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.CSSTableGenerator tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
 }
