--- a/app/src/main/assets/tool/tool/css/index.css
+++ b/app/src/main/assets/tool/tool/css/index.css
@@ -100,7 +100,19 @@ top: 8%;
 #Addmark
 {
     height: 8%;
-    min-height: 30px;
+    min-height: 50px;
+    width: 100%;
+    background-color: #242525;  
+    border-top-left-radius: 0.75em;
+    border-top-right-radius: 0.75em;
+    display: table;
+    color: white;
+    vertical-align: middle;
+    text-align: center;
+}
+#galleryMark
+{
+    height: 30px;
     width: 100%;
     background-color: #242525;  
     border-top-left-radius: 0.75em;
