--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -72,13 +72,40 @@
                         android:paddingBottom="10dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp">
-                        <ListView
+                        <LinearLayout
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
-                            android:id="@+id/openmenu"
-                            android:visibility="visible"
-                            android:scrollbars="none"/>
+                            android:orientation="vertical"
+                            android:weightSum="10">
+                            <ListView
+                                android:layout_width="fill_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="10"
+                                android:id="@+id/openmenu"
+                                android:visibility="visible"
+                                android:scrollbars="none"/>
+                            <LinearLayout
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:weightSum="10">
+                                <Button
+                                    android:id="@+id/openListDeleteBtn"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="5"
+                                    android:layout_height="wrap_content"
+                                    android:text="Delete"
+                                    android:visibility="visible"/>
+                                <Button
+                                    android:id="@+id/openListOpenBtn"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="5"
+                                    android:layout_height="wrap_content"
+                                    android:text="Open"
+                                    android:visibility="visible"/>
+                            </LinearLayout>
 
+                        </LinearLayout>
                     </LinearLayout>
 
                     <ImageView
@@ -123,12 +150,27 @@
                         android:paddingRight="5dp"
                         android:paddingLeft="5dp">
 
-                        <ListView
+                        <LinearLayout
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
-                            android:id="@+id/newmenu"
-                            android:visibility="visible"
-                            android:scrollbars="none"/>
+                            android:orientation="vertical"
+                            android:weightSum="10">
+                            <ListView
+                                android:layout_width="fill_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="10"
+                                android:id="@+id/newmenu"
+                                android:visibility="visible"
+                                android:scrollbars="none"
+                                android:layout_gravity="top"/>
+                            <Button
+                                android:id="@+id/newListBtn"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:text="New"
+                                android:visibility="visible"
+                                />
+                        </LinearLayout>
                     </LinearLayout>
 
                     <ImageView
@@ -157,17 +199,6 @@
                     android:focusableInTouchMode="false"
                     android:visibility="gone" />
             </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="10">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Button"
-                android:id="@+id/testbtn" />
         </LinearLayout>
     </LinearLayout>
 
