--- a/app/src/main/assets/project/tool/css/index.css
+++ b/app/src/main/assets/project/tool/css/index.css
@@ -100,7 +100,7 @@ top: 8%;
 #Addmark
 {
     height: 8%;
-    min-height: 30px;
+    min-height: 50px;
     width: 100%;
     background-color: #242525;  
     border-top-left-radius: 0.75em;
@@ -109,6 +109,24 @@ top: 8%;
     color: white;
     vertical-align: middle;
     text-align: center;
+}
+#galleryMark
+{
+    height: 30px;
+    width: 100%;
+    background-color: #242525;  
+    border-top-left-radius: 0.75em;
+    border-top-right-radius: 0.75em;
+    display: table;
+    color: white;
+    vertical-align: middle;
+    text-align: center;
+}
+#galleryMark p
+{
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
 }
 #Addmark p
 {
@@ -131,15 +149,43 @@ top: 8%;
 #galleria{height:320px}
 #galleryPanel
 {
+    border-radius: 8px;
     position: fixed;
     height: auto;
     width: 50%;
     top: 50%;
     left: 10%;
-   background-color: blue;
+   background-color: #404040;
 }
 #Add-panel::before {
     color: #000;
+}
+.galleria-theme-classic .galleria-stage 
+{
+    top: 0;
+    bottom: 5px;
+    padding-left: 1%;
+    padding-right: 1%;
+    
+    background-color: #191919;
+}
+.galleria-thumbnails-list
+{
+    padding-top: 2px;
+    border:0;
+    border-top: 2px;
+    border-color: white;
+    border-style: solid;
+    padding-bottom: 2px;
+    top:0;
+    background-color: #202020;
+}
+.galleria-theme-classic
+{
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+   
+    background-color: transparent;
 }
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
@@ -303,13 +349,13 @@ h1 {
 }
 #propertyPanel
 {
-    position: fixed;
+   position: fixed;
     height:40%;
-    width: 20%;
-    left: 0;
-    top: -40%;
-    z-index: 300;
-    background-color: green;
+    width: 30%;
+    right: 0%;
+    top:50%;
+    z-index: 10;
+    background-color: #464342;
     border-radius: 8px;
 }
 @keyframes fade {
@@ -722,8 +768,10 @@ a.image_container img {
         border-spacing: 0;
     height: 100%;
 	width:100%;
-	margin:0px;padding:0px;
-    display: block;
+	margin:0px;
+    padding:0px;
+    table-layout: fixed;
+    display: table;
 }
 .CSSTableGenerator table tbody{
     overflow-y: scroll;
@@ -737,6 +785,7 @@ a.image_container img {
 .CSSTableGenerator table tbody tr
 {
     display:table;
+    table-layout: fixed;
     width: 100%;
 }
 .CSSTableGenerator tr:last-child td:last-child {
@@ -748,19 +797,24 @@ a.image_container img {
 	-webkit-border-bottom-left-radius:0px;
 	border-bottom-left-radius:0px;
 }.CSSTableGenerator tr td:last-child:hover {
-	background-color:#ffffff;
-		
+    -webkit-filter: opacity(0.6);  
+    background-color: #606060;
 
 }
 .CSSTableGenerator td{
-    width: 50%;
+    left: 50%;
+    display: table-cell;
+    width:auto;
+    min-width: 50%;
 	vertical-align:middle;
-	
+	text-overflow: clip;
 	background-color:transparent;
-
+    overflow-x: scroll;
+    white-space: nowrap;
 	border:1px solid #000000;
 	border-width:0px 1px 1px 0px;
 	text-align:left;
+    table-layout:auto;
 	padding:10px;
 	font-size:15px;
 	font-family:Arial;
@@ -786,13 +840,7 @@ a.image_container img {
 	font-weight:bold;
 	color:#ffffff;
 }
-.CSSTableGenerator tr:first-child:hover td{
-	background:-o-linear-gradient(bottom, transparent 5%, transparent 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, transparent), color-stop(1, transparent) );
-	background:-moz-linear-gradient( center top, transparent 5%, transparent 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="transparent", endColorstr="transparent");	background: -o-linear-gradient(top,transparent,ff7f00);
 
-	background-color:transparent;
-}
 .CSSTableGenerator tr:first-child td:first-child{
 	border-width:0px 0px 1px 0px;
 }
