--- a/app/src/main/assets/project/tool/gallery/galleria.classic.css
+++ b/app/src/main/assets/project/tool/gallery/galleria.classic.css
@@ -5,7 +5,7 @@
 .galleria-theme-classic {
     position: relative;
     overflow: hidden;
-    background-color: transparent;
+    background: #000;
 }
 .galleria-theme-classic img {
     -moz-user-select: none;
