--- a/app/src/main/assets/tool/tool/css/index.css
+++ b/app/src/main/assets/tool/tool/css/index.css
@@ -768,8 +768,10 @@ a.image_container img {
         border-spacing: 0;
     height: 100%;
 	width:100%;
-	margin:0px;padding:0px;
-    display: block;
+	margin:0px;
+    padding:0px;
+    table-layout: fixed;
+    display: table;
 }
 .CSSTableGenerator table tbody{
     overflow-y: scroll;
@@ -783,6 +785,7 @@ a.image_container img {
 .CSSTableGenerator table tbody tr
 {
     display:table;
+    table-layout: fixed;
     width: 100%;
 }
 .CSSTableGenerator tr:last-child td:last-child {
@@ -794,19 +797,24 @@ a.image_container img {
 	-webkit-border-bottom-left-radius:0px;
 	border-bottom-left-radius:0px;
 }.CSSTableGenerator tr td:last-child:hover {
-	background-color:#ffffff;
-		
+    -webkit-filter: opacity(0.6);  
+    background-color: #606060;
 
 }
 .CSSTableGenerator td{
-    width: 50%;
+    left: 50%;
+    display: table-cell;
+    width:auto;
+    min-width: 50%;
 	vertical-align:middle;
-	
+	text-overflow: clip;
 	background-color:transparent;
-
+    overflow-x: scroll;
+    white-space: nowrap;
 	border:1px solid #000000;
 	border-width:0px 1px 1px 0px;
 	text-align:left;
+    table-layout:auto;
 	padding:10px;
 	font-size:15px;
 	font-family:Arial;
@@ -832,13 +840,7 @@ a.image_container img {
 	font-weight:bold;
 	color:#ffffff;
 }
-.CSSTableGenerator tr:first-child:hover td{
-	background:-o-linear-gradient(bottom, transparent 5%, transparent 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, transparent), color-stop(1, transparent) );
-	background:-moz-linear-gradient( center top, transparent 5%, transparent 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="transparent", endColorstr="transparent");	background: -o-linear-gradient(top,transparent,ff7f00);
 
-	background-color:transparent;
-}
 .CSSTableGenerator tr:first-child td:first-child{
 	border-width:0px 0px 1px 0px;
 }
