--- a/app/src/main/assets/tool/tool/css/index.css
+++ b/app/src/main/assets/tool/tool/css/index.css
@@ -341,6 +341,7 @@ body {
 #innercontent
 {
     //overflow: scroll;
+    overflow-y: hidden;
     position:  relative;
     top:20%;
     left: 15%;
@@ -351,7 +352,7 @@ body {
     background-color: white;
     width: 87%;
     //height: 80%;
-    min-height: 80%;
+    min-height: 120%;
     box-shadow: 0px 10px 15px #161415;
 }
 h1 {
