--- a/app/src/main/assets/platforms/android/assets/www/tool/css/framework.css
+++ b/app/src/main/assets/platforms/android/assets/www/tool/css/framework.css
@@ -5,6 +5,12 @@ body {} div {} .selectable {} .column {
 .slide {
     margin: 10px 0;
 }
+.cursorStyle {
+    background-color: #23527c;
+    font-size: 3px;
+    margin: 2px;
+    width: 100%;
+}
 .selectionMask {
     background-color: rgba(0, 96, 230, 0.4);
     border-width: 0;
@@ -13,6 +19,7 @@ body {} div {} .selectable {} .column {
     padding:0;
     position: absolute;
     display: none;
+    z-index:20;
 }
 .selectionMaskDragging{
     background-color: rgba(0, 96, 230, 0.2);
@@ -21,6 +28,7 @@ body {} div {} .selectable {} .column {
     margin: 0;
     padding:0;
     position: absolute;
+    z-index:20;
 }
 #myGestureListener {
     position: fixed;
@@ -28,7 +36,7 @@ body {} div {} .selectable {} .column {
     background-color: rgba(101, 171, 176, 50);
     top: 0;
     right: 0;
-    z-index: 100;
+    z-index: 20;
 }
 .cursorEntry{
     display: none;
