--- a/app/src/main/assets/www/tool/css/index.css
+++ b/app/src/main/assets/www/tool/css/index.css
@@ -210,12 +210,12 @@ output
 {
     opacity: 0;
     border-radius: 8px;
-    position: fixed;
+    position: absolute;
     height: auto;
     padding-bottom: 10px;
     width: auto;
     top: 10%;
-    left: 10%;
+    left: -100%;
     background-color: #404040;
     z-index: 40;
 }
