--- a/app/src/main/assets/platforms/android/assets/www/tool/css/index.css
+++ b/app/src/main/assets/platforms/android/assets/www/tool/css/index.css
@@ -42,6 +42,7 @@ border-radius: 10px;
     left: 75.2%;
     top:-80%;
     background-color: #464342;
+    z-index: 40;
 }
 .bubble_top:after 
 {
@@ -52,7 +53,7 @@ border-width: 0 15px 15px;
 border-color: #464342 transparent ;
 display: block;
 width: 0;
-z-index: 1;
+z-index: 40;
 top: -15px;
 left: 110px;
 }
@@ -77,7 +78,7 @@ border-width: 15px 15px 15px 0;
 border-color: transparent #464342;
 display: block;
 width: 0;
-z-index: 3;
+z-index: 40;
 left: -15px;
 top: 8%;
 }
@@ -95,7 +96,7 @@ top: 8%;
     padding:0;
     box-shadow: 7px 7px 15px #161415;
     -webkit-transform: translateZ(0);
-    z-index: 2;
+    z-index: 25;
 }
 
 .slider {
@@ -202,19 +203,21 @@ output
     width: 50%;
     top: -50%;
     right: 0%;
-   background-color: #404040;
+    background-color: #404040;
+    z-index: 40;
 }
 #colorPickerPanel
 {
-    opacity: 0.5;
+    opacity: 0;
     border-radius: 8px;
-    position: fixed;
+    position: absolute;
     height: auto;
     padding-bottom: 10px;
     width: auto;
     top: 10%;
-    left: 10%;
+    left: -100%;
     background-color: #404040;
+    z-index: 40;
 }
 #Add-panel::before {
     color: #000;
@@ -256,12 +259,12 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    
-    background-image:none;
+    overflow-y: scroll;1    background-image:none;
     background-attachment:fixed;
     font-family:'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
+    overflow: auto;
     margin:0px;
     padding:0px;
     width:100%;
@@ -326,7 +329,7 @@ body {
     width: 200%;
     background-color: black;
     opacity: 0.5;
-    z-index: 10;
+    z-index: 50;
 }
 #wrapper
 {
@@ -372,14 +375,14 @@ h1 {
     top: -100%;
     left: 0;
     position:  absolute;
-    z-index: 200;
+    z-index: 70;
 }
 #preview-control
 {
     height: 10%;
     width: 5%;
     position: fixed;
-    z-index: 250;
+    z-index: 71;
     right: 0;
     top: -10%;
 }
@@ -414,12 +417,13 @@ h1 {
 }
 #propertyPanel
 {
-   position: fixed;
-    height:40%;
+    opacity: 0;
+   position: absolute;
+    height:430px;
     width: 30%;
     right: 0%;
-    top:50%;
-    z-index: 10;
+    top:20%;
+    z-index: 80;
     background-color: #464342;
     border-radius: 8px;
 }
@@ -473,7 +477,7 @@ h1 {
     border: 0;
     box-shadow: 0px 10px 20px #161415;
     padding: 0;
-    z-index: 2;
+    z-index: 60;
     vertical-align: middle;
     text-align: center;
 }
@@ -656,7 +660,7 @@ a.option_container img.displayed {
     height: 50%;
     left: 15%;
     top: 25%;
-    z-index: 200;
+    z-index: 60;
 }
 #toolmark img
 {
@@ -678,17 +682,7 @@ a.option_container img.displayed {
     height: 84.5%;
     box-shadow: 7px 7px 15px #161415;
     border-radius: 8px;
-    z-index: 3;
-}
-#propertypanel
-{
-    background-color:rgb(60,60,60);
-    opacity: 0.8;
-    width: 15%;
-    height: 50%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
+    z-index: 30;
 }
 #navpanel
 {
@@ -739,28 +733,19 @@ a.image_container img {
     width: 100%;
     vertical-align: middle;
 }
-
-#propertypanel
-{
-    background-color:rgb(60,60,60);
-    opacity: 0.8;
-    width: 15%;
-    height: 50%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
 .element
 {
-    padding-left: 20px;
-    padding-right: 20px;
-    height: 20%;
-   border: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 80px;
+    border: 0px;
     border-style: dotted;
+    border-top:0px;
     border-color: #242525;
     background-color: transparent;
     position: relative;
     text-align: center;
+    width:50%;
 }
 .element h1
 {
@@ -770,17 +755,33 @@ a.image_container img {
     transform: translate(-50%,-50%);
     display: block;
     color: white;
-    text-align: center;
+    text-align:justify;
 }
-.element p
+.addContainer
 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: block;
-    color: white;
-    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 2px;
+    border-radius: 8px;
+    border-style: dotted;
+    border-color: white;
+    width: 100%;
+    height: auto;
+}
+.elementCat
+{
+    padding-left: 0px;
+    padding-right: 20px;
+    margin-bottom:  5px;
+    height: 30px;
+    font-size: 25px;
+    border: 0px;
+    border-style: dotted;
+    border-color: #242525;
+    background-color: transparent;
+    position: relative;
+    text-align: left;
+    width:100%;
 }
 #menuimg
 {
