--- a/app/src/main/assets/platforms/android/assets/www/tool/css/index.css
+++ b/app/src/main/assets/platforms/android/assets/www/tool/css/index.css
@@ -421,9 +421,9 @@ h1 {
    position: absolute;
     height:430px;
     width: 30%;
-    right: 0%;
+    left: -100%;
     top:20%;
-    z-index: 80;
+    z-index: 40;
     background-color: #464342;
     border-radius: 8px;
 }
