--- a/app/src/main/assets/www/tool/css/framework.css
+++ b/app/src/main/assets/www/tool/css/framework.css
@@ -7,22 +7,97 @@ body {
 
 .selectable {
 }
+@-webkit-keyframes placeholderAnimation {
+    from {
+        background-color: rgba(35,82,124,0.7);
+    }
+    to {
+        background-color: rgba(35,82,124,0.4);
+    }
+}
+
+@-webkit-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 .column {
 
 }
+
 .dummy {
     display: none;
 }
+
 .slide {
     margin: 10px 0;
 }
-
+.placeholder .cursorStyle{
+    background-color: #23527c;
+    font-size: 100%;
+    width: 100%;
+    margin: 0;
+    min-height: 60px;
+    animation-direction: alternate-reverse;
+    -moz-animation-direction: alternate-reverse;
+    -webkit-animation-direction: alternate-reverse;
+    -o-animation-direction: alternate-reverse;
+    -webkit-animation: placeholderAnimation 1s infinite; /* Safari 4+ */
+    -moz-animation: placeholderAnimation 1s infinite; /* Fx 5+ */
+    -o-animation: placeholderAnimation 1s infinite; /* Opera 12+ */
+    animation: placeholderAnimation 1s infinite; /* IE 10+, Fx 29+ */
+}
+.placeholder{
+    padding: 0;
+    min-height: 40px;
+}
 .cursorStyle {
     background-color: #23527c;
-    font-size: 3px;
+    font-size: 1px;
     margin: 2px;
     width: 100%;
+    animation-direction: alternate-reverse;
+    /* Firefox */
+    -moz-animation-direction: alternate-reverse;
+    /* Safari and Chrome */
+    -webkit-animation-direction: alternate-reverse;
+    /* Opera */
+    -o-animation-direction: alternate-reverse;
+    -webkit-animation: cursorAnimation 1s infinite; /* Safari 4+ */
+    -moz-animation: cursorAnimation 1s infinite; /* Fx 5+ */
+    -o-animation: cursorAnimation 1s infinite; /* Opera 12+ */
+    animation: cursorAnimation 1s infinite; /* IE 10+, Fx 29+ */
 }
 
 .selectionMask {
