--- a/app/src/main/assets/platforms/android/assets/www/tool/css/framework.css
+++ b/app/src/main/assets/platforms/android/assets/www/tool/css/framework.css
@@ -8,21 +8,72 @@ body {
 .selectable {
 }
 
+@-webkit-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes cursorAnimation {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .column {
 
 }
+
 .dummy {
     display: none;
 }
+
 .slide {
     margin: 10px 0;
 }
-
+.placeholder .cursorStyle{
+    display: none;
+}
 .cursorStyle {
     background-color: #23527c;
-    font-size: 3px;
+    font-size: 1px;
     margin: 2px;
     width: 100%;
+    animation-direction: alternate-reverse;
+    /* Firefox */
+    -moz-animation-direction: alternate-reverse;
+    /* Safari and Chrome */
+    -webkit-animation-direction: alternate-reverse;
+    /* Opera */
+    -o-animation-direction: alternate-reverse;
+    -webkit-animation: cursorAnimation 1s infinite; /* Safari 4+ */
+    -moz-animation: cursorAnimation 1s infinite; /* Fx 5+ */
+    -o-animation: cursorAnimation 1s infinite; /* Opera 12+ */
+    animation: cursorAnimation 1s infinite; /* IE 10+, Fx 29+ */
 }
 
 .selectionMask {
