--- a/app/src/main/assets/www/tool/css/framework.css
+++ b/app/src/main/assets/www/tool/css/framework.css
@@ -7,12 +7,13 @@ body {
 
 .selectable {
 }
+
 @-webkit-keyframes placeholderAnimation {
     from {
-        background-color: rgba(35,82,124,0.7);
+        background-color: rgba(35, 82, 124, 0.7);
     }
     to {
-        background-color: rgba(35,82,124,0.4);
+        background-color: rgba(35, 82, 124, 0.4);
     }
 }
 
@@ -63,7 +64,8 @@ body {
 .slide {
     margin: 10px 0;
 }
-.placeholder .cursorStyle{
+
+.placeholder .cursorStyle {
     background-color: #23527c;
     font-size: 100%;
     width: 100%;
@@ -78,10 +80,12 @@ body {
     -o-animation: placeholderAnimation 1s infinite; /* Opera 12+ */
     animation: placeholderAnimation 1s infinite; /* IE 10+, Fx 29+ */
 }
-.placeholder{
+
+.placeholder {
     padding: 0;
     min-height: 40px;
 }
+
 .cursorStyle {
     background-color: #23527c;
     font-size: 1px;
