--- a/app/src/main/assets/www/tool/css/index.css
+++ b/app/src/main/assets/www/tool/css/index.css
@@ -245,14 +245,14 @@ output
 {
     opacity: 0;
     border-radius: 8px;
-    position: fixed;
+    position: absolute;
     height: auto;
     padding-bottom: 10px;
     width: auto;
     top: 10%;
     left: -100%;
     background-color: #404040;
-    z-index: 40;
+    z-index: 41;
 }
 #Add-panel::before {
     color: #000;
